Fixed Verse Copy problems 1) backgrounding of dialog 2) Verse selection not handled right 3) Mac copy produced VCard for email client.  (now runs system shell pbcopy command on the text )

--- a/src/dialogs/CopyDialog/copydialog.ui
+++ b/src/dialogs/CopyDialog/copydialog.ui
@@ -283,6 +283,16 @@
     <string>Add Book And Chapter</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="leTextForCopy">
+   <property name="geometry">
+    <rect>
+     <x>24</x>
+     <y>513</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
