--- a/src/dialogs/CopyDialog/copydialog.ui
+++ b/src/dialogs/CopyDialog/copydialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Copy Verses Dialog</string>
   </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
@@ -187,8 +187,8 @@
     <rect>
      <x>15</x>
      <y>470</y>
-     <width>391</width>
-     <height>36</height>
+     <width>385</width>
+     <height>28</height>
     </rect>
    </property>
    <property name="text">
@@ -281,16 +281,6 @@
    </property>
    <property name="text">
     <string>Add Book And Chapter</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="leTextForCopy">
-   <property name="geometry">
-    <rect>
-     <x>24</x>
-     <y>513</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
    </property>
   </widget>
  </widget>
